samples/_failures_safe/1761600736_08d0bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5f0445c.c: In function ‘main’:
./samples/SAFE/__tmp_e5f0445c.c:147:10: error: ‘init_’ undeclared (first use in this function); did you mean ‘int’?
  147 |     if (!init_
      |          ^~~~~
      |          int
./samples/SAFE/__tmp_e5f0445c.c:147:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e5f0445c.c:147:15: error: expected ‘)’ at end of input
  147 |     if (!init_
      |        ~      ^
      |               )
./samples/SAFE/__tmp_e5f0445c.c:147:5: error: expected declaration or statement at end of input
  147 |     if (!init_
      |     ^~
